k8s/07.ingress/video-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-deployment
  labels:
    app: video
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video
  template:
    metadata:
      labels:
        app: video
    spec:
      containers:
      - name: video
        image: hashicorp/http-echo
        args:
          - "-text=Watch video"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: video-service
spec:
  type: ClusterIP
  selector:
    app: video
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5678
